--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<app-hero-form></app-hero-form>
-
+<food-recommendation-form></food-recommendation-form>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
