--- a/src/app/food-recommendation/food-recommendation.html
+++ b/src/app/food-recommendation/food-recommendation.html
@@ -1,52 +1,80 @@
 <div class="container">
   <div [hidden]="submitted">
-    <h1>Hero Form</h1>
+    <h1>What to Eat</h1>
     <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
       <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" id="name"
-               required
-               [(ngModel)]="model.name" name="name"
-               #name="ngModel">
-        <div [hidden]="name.valid || name.pristine"
-             class="alert alert-danger">
+        <label for="name">What type of cusine would you like</label>
+        <input
+          type="checkbox"
+          class="form-control"
+          id="name"
+          required
+          [(ngModel)]="model.name"
+          name="name"
+          #name="ngModel"
+        />
+        <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
           Name is required
         </div>
       </div>
 
       <div class="form-group">
         <label for="alterEgo">Alter Ego</label>
-        <input type="text" class="form-control" id="alterEgo"
-               [(ngModel)]="model.alterEgo" name="alterEgo">
+        <input
+          type="text"
+          class="form-control"
+          id="alterEgo"
+          [(ngModel)]="model.alterEgo"
+          name="alterEgo"
+        />
       </div>
 
       <div class="form-group">
         <label for="power">Hero Power</label>
-        <select class="form-control" id="power"
-                required
-                [(ngModel)]="model.power" name="power"
-                #power="ngModel">
+        <select
+          class="form-control"
+          id="power"
+          required
+          [(ngModel)]="model.power"
+          name="power"
+          #power="ngModel"
+        >
           <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
         </select>
-        <div [hidden]="power.valid || power.pristine" class="alert alert-danger">
+        <div
+          [hidden]="power.valid || power.pristine"
+          class="alert alert-danger"
+        >
           Power is required
         </div>
       </div>
 
-      <button type="submit" class="btn btn-success" [disabled]="!heroForm.form.valid">Submit</button>
-      <button type="button" class="btn btn-default" (click)="newHero(); heroForm.reset()">New Hero</button>
-      <i>with</i> reset
-
-      &nbsp;&nbsp;
-      <button type="button" class="btn btn-default" (click)="newHero()">New Hero</button>
+      <button
+        type="submit"
+        class="btn btn-success"
+        [disabled]="!heroForm.form.valid"
+      >
+        Submit
+      </button>
+      <button
+        type="button"
+        class="btn btn-default"
+        (click)="newHero(); heroForm.reset()"
+      >
+        New Hero
+      </button>
+      <i>with</i> reset &nbsp;&nbsp;
+      <button type="button" class="btn btn-default" (click)="newHero()">
+        New Hero
+      </button>
       <i>without</i> reset
 
-     <!-- NOT SHOWN IN DOCS -->
+      <!-- NOT SHOWN IN DOCS -->
       <div>
-        <hr>
+        <hr />
         Name via form.controls = {{showFormControls(heroForm)}}
       </div>
-     <!-- - -->
+      <!-- - -->
     </form>
   </div>
 
@@ -64,107 +92,122 @@
       <div class="col-xs-3">Power</div>
       <div class="col-xs-9">{{ model.power }}</div>
     </div>
-    <br>
-    <button type="button" class="btn btn-primary" (click)="submitted=false">Edit</button>
+    <br />
+    <button type="button" class="btn btn-primary" (click)="submitted=false">
+      Edit
+    </button>
   </div>
 </div>
 
 <!-- ====================================================  -->
-  <div>
-    <form>
-
-       <!-- ... all of the form ... -->
-
-    </form>
-  </div>
+<div>
+  <form>
+    <!-- ... all of the form ... -->
+  </form>
+</div>
 
 <!-- ====================================================  -->
-<hr>
+<hr />
 <style>
   .no-style .ng-valid {
-  border-left: 1px  solid #CCC
-}
+    border-left: 1px solid #ccc;
+  }
 
   .no-style .ng-invalid {
-  border-left: 1px  solid #CCC
-}
+    border-left: 1px solid #ccc;
+  }
 </style>
 <div class="no-style" style="margin-left: 4px">
   <div class="container">
-      <h1>Hero Form</h1>
-      <form>
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" class="form-control" id="name" required>
-        </div>
+    <h1>Hero Form</h1>
+    <form>
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" id="name" required />
+      </div>
 
-        <div class="form-group">
-          <label for="alterEgo">Alter Ego</label>
-          <input type="text" class="form-control" id="alterEgo">
-        </div>
+      <div class="form-group">
+        <label for="alterEgo">Alter Ego</label>
+        <input type="text" class="form-control" id="alterEgo" />
+      </div>
 
-        <div class="form-group">
-          <label for="power">Hero Power</label>
-          <select class="form-control" id="power" required>
-            <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
-          </select>
-        </div>
+      <div class="form-group">
+        <label for="power">Hero Power</label>
+        <select class="form-control" id="power" required>
+          <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
+        </select>
+      </div>
 
-        <button type="submit" class="btn btn-success">Submit</button>
-
-      </form>
+      <button type="submit" class="btn btn-success">Submit</button>
+    </form>
   </div>
 
   <!-- ====================================================  -->
-  <hr>
+  <hr />
   <div class="container">
-      <h1>Hero Form</h1>
-      <form #heroForm="ngForm">
-        {{ model | json }}
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" class="form-control" id="name"
-                 required
-                 [(ngModel)]="model.name" name="name">
-        </div>
+    <h1>Hero Form</h1>
+    <form #heroForm="ngForm">
+      {{ model | json }}
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input
+          type="text"
+          class="form-control"
+          id="name"
+          required
+          [(ngModel)]="model.name"
+          name="name"
+        />
+      </div>
 
-        <div class="form-group">
-          <label for="alterEgo">Alter Ego</label>
-          <input type="text"  class="form-control" id="alterEgo"
-                 [(ngModel)]="model.alterEgo" name="alterEgo">
-        </div>
+      <div class="form-group">
+        <label for="alterEgo">Alter Ego</label>
+        <input
+          type="text"
+          class="form-control"
+          id="alterEgo"
+          [(ngModel)]="model.alterEgo"
+          name="alterEgo"
+        />
+      </div>
 
-        <div class="form-group">
-          <label for="power">Hero Power</label>
-          <select class="form-control"  id="power"
-                  required
-                  [(ngModel)]="model.power" name="power">
-            <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
-          </select>
-        </div>
+      <div class="form-group">
+        <label for="power">Hero Power</label>
+        <select
+          class="form-control"
+          id="power"
+          required
+          [(ngModel)]="model.power"
+          name="power"
+        >
+          <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
+        </select>
+      </div>
 
-        <button type="submit" class="btn btn-success">Submit</button>
-
-      </form>
+      <button type="submit" class="btn btn-success">Submit</button>
+    </form>
   </div>
 
   <!-- EXTRA MATERIAL FOR DOCUMENTATION -->
-  <hr>
-    <input type="text" class="form-control" id="name"
-           required
-           [(ngModel)]="model.name" name="name">
-    TODO: remove this: {{model.name}}
-  <hr>
-    <input type="text" class="form-control" id="name"
-           required
-           [ngModel]="model.name" name="name"
-           (ngModelChange)="model.name = $event">
-    TODO: remove this: {{model.name}}
+  <hr />
+  <input
+    type="text"
+    class="form-control"
+    id="name"
+    required
+    [(ngModel)]="model.name"
+    name="name"
+  />
+  TODO: remove this: {{model.name}}
+  <hr />
+  <input
+    type="text"
+    class="form-control"
+    id="name"
+    required
+    [ngModel]="model.name"
+    name="name"
+    (ngModelChange)="model.name = $event"
+  />
+  TODO: remove this: {{model.name}}
 </div>
-
-
-<!-- 
-Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at https://angular.io/license
--->
